--- a/app.json
+++ b/app.json
@@ -14,17 +14,17 @@
 	"signals": {
 		"433": {
 			"Mertik": {
-				"sof": [ 320, 400 ],
+				"sof": [],
 				"eof": [],
 				"words": [
-					[ 800, 360 ],
-					[ 450, 710 ]
+					[ 760, 400 ],
+					[ 400, 760 ]
 				],
 				"interval": 18000,
 				"repetitions": 10,
 				"sensitivity": 0.9,
-				"minimalLength": 12,
-				"maximalLength": 20
+				"minimalLength": 13,
+				"maximalLength": 23
 			}
 		}
 	},
